--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
 <h1>Our Menu</h1>
 
-<div>
-	<p>loren ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim add minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
-	</p>
-	<p></p>
-	<p></p>
-
-</div>
+<section class="row">
+	<div class="col-lg-4 col-md-6">
+		<p id="titlesChicken">
+			Chicken
+		</p>
+		<p id="parText">loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
+		</p>
+	</div>
+	<div class="col-lg-4 col-md-6">
+	<p id="titlesBeef">
+			Beef
+		</p>
+		<p id="parText">loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
+		</p>
+	</div>
+	<div class="col-lg-4 lastP lastPM">
+	<p id="titlesSushi">
+			Sushi
+		</p>
+		<p id="parText">loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
+		</p>
+	</div>
+</section>
 
 </body>
 </html>
