my second commit index

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,25 +11,25 @@
 <h1>Our Menu</h1>
 
 <section class="row">
-	<div class="col-lg-4 col-md-6">
+	<div class="col-lg-4 col-md-6 col-sd-6">
 		<p id="titlesChicken">
 			Chicken
 		</p>
-		<p id="parText">loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
+		<p>loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
 		</p>
 	</div>
 	<div class="col-lg-4 col-md-6">
 	<p id="titlesBeef">
 			Beef
 		</p>
-		<p id="parText">loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
+		<p>loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
 		</p>
 	</div>
-	<div class="col-lg-4 lastP lastPM">
+	<div class="col-lg-4 lastP">
 	<p id="titlesSushi">
 			Sushi
 		</p>
-		<p id="parText">loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
+		<p>loren ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nsis ut aliquip ex ea commodo consequat.
 		</p>
 	</div>
 </section>
